# PME-offrepublique

./: .gitattributes  .gitignore  DEPLOY-mvp.md  Makefile  README.md  cdc-technique-mvp-ao.md  codex-login.ps1  codex-run.ps1  docker-compose.yml
.agentsroom/: project.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_fiche.py  0003_kb.py
backend/app/: __init__.py  config.py  db.py  logging_config.py  main.py
backend/app/api/routes/: auth.py  dce.py  health.py  kb.py
backend/app/core/: security.py
backend/app/models/: __init__.py  base.py  dce.py  kb.py
backend/app/pipeline/: __init__.py  classify.py  extract.py  fiche.py  gonogo.py  llm.py  schema.py  unzip.py
backend/app/schemas/: dce.py  kb.py
backend/app/services/: embeddings.py  kb.py  kb_import.py
backend/app/storage/: s3.py
backend/app/workers/: queue.py  tasks.py  worker.py
backend/tests/: test_classify.py  test_gonogo.py  test_health.py  test_kb.py  test_kb_postgres_isolation.py  test_unzip.py
codex-llm-server/: Dockerfile  README.md  codex-login.ps1  codex-run.ps1  entrypoint.sh  railway.json  refresh-codex-auth.ps1  refresh-dce.ps1
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json  railway.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/lib/: api.ts
site-presentation/: .gitignore  next.config.ts  package-lock.json  package.json
site-presentation/src/app/: globals.css  layout.tsx  page.tsx
(+51 files in other folders)
